--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -69,7 +69,8 @@
                         class="bi bi-arrow-return-right"></i> Negative</a>
                 <a href="#powoftenpos" class="list-group-item list-group-item-dark list-group-item-action"><i
                         class="bi bi-arrow-return-right"></i> Positive</a>
-                <a href="#identities" class="list-group-item list-group-item-dark list-group-item-action">Popular Identities</a>
+                <a href="#identities" class="list-group-item list-group-item-dark list-group-item-action">Popular
+                    Identities</a>
             </div>
         </div>
         <div class="col-md-9 mt-5 text-center">
