--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- MAIL -->
     <meta name="yandex-verification" content="f86171133514f762" />
@@ -9,18 +10,22 @@
     <title>MathFlare</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
-    <meta name="keywords" content="mathflare, math-flare, math flare,liquidgeometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,logarithm,systems of equations solver,logarithm solver,square root,cude root,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle">
-    <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="keywords"
+        content="mathflare, math-flare, math flare,liquidgeometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,logarithm,systems of equations solver,logarithm solver,square root,cude root,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle">
+    <meta name="description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="MathFlare LLC." />
     <meta name="og:url" content="https://www.mathflare.tk" />
     <meta name="og:title" content="MathFlare" />
-    <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="og:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
-    <meta name="og:locale" content="website" />
+    <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="twitter:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <link rel="canonical" href="https://www.mathflare.tk">
     <link rel="home" href="https://www.mathflare.tk">
     <!-- STYLES -->
@@ -31,7 +36,9 @@
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
@@ -42,20 +49,27 @@
         gtag('config', 'G-7W2S8VV31F');
     </script>
 </head>
+
 <body>
     <!-- NAVBAR START -->
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="dead-center">
-        <h1 class="text-white fs-1"><img src="Assets/icon.png" class=" user-select-none logo" style="height: 1em; transform: rotate(180deg);" alt="logo"> MathFlare</h1>
+        <h1 class="text-white fs-1"><img src="Assets/icon.png" class=" user-select-none logo"
+                style="height: 1em; transform: rotate(180deg);" alt="logo"> MathFlare</h1>
         <h3 class="text-danger fs-3">the go-to site for geometry and algebra</h3>
         <div class="d-inline-flex">
-            <a href="https://github.com/mathflare" target="_blank" rel="noopener" class="btn btn-outline-light m-1"><i class="bi bi-github"></i> GitHub</a>
-            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-warning m-1"><i class="bi bi-bug-fill"></i> Report a Bug</a>
-            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-success m-1 btn-mobile"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
+            <a href="https://github.com/mathflare" target="_blank" rel="noopener" class="btn btn-outline-light m-1"><i
+                    class="bi bi-github"></i> GitHub</a>
+            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener"
+                class="btn btn-warning m-1"><i class="bi bi-bug-fill"></i> Report a Bug</a>
+            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener"
+                class="btn btn-success m-1 btn-mobile"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
         </div>
         <div>
-            <a href="https://www.instagram.com/mathflare" target="_blank" rel="noopener" class="btn btn-danger m-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sponsored"><i class="bi bi-instagram"></i> Instagram</a>
+            <a href="https://www.instagram.com/mathflare" target="_blank" rel="noopener" class="btn btn-danger m-1"
+                data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sponsored"><i class="bi bi-instagram"></i>
+                Instagram</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
@@ -63,29 +77,30 @@
     <script src="Scripts/bootstrap.js"></script>
     <script src="dist/navbar.js"></script>
     <script>
-        if (typeof(Storage) !== 'undefined') {
+        if (typeof (Storage) !== 'undefined') {
             let storage = window.localStorage, pageCount;
             window.addEventListener('load', () => {
-            if(!storage.getItem("pageCount")){
-                storage.setItem('pageCount', 1);
-            } else {
-                pageCount = storage.getItem("pageCount");
-                pageCount = parseFloat(pageCount) + parseFloat(1);
-                storage.setItem('pageCount',pageCount );
-            }
-        });
+                if (!storage.getItem("pageCount")) {
+                    storage.setItem('pageCount', 1);
+                } else {
+                    pageCount = storage.getItem("pageCount");
+                    pageCount = parseFloat(pageCount) + parseFloat(1);
+                    storage.setItem('pageCount', pageCount);
+                }
+            });
         } else {
             console.error('your browser does not support local storage');
         }
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {  
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
             return new bootstrap.Tooltip(tooltipTriggerEl)
         });
-        console.log("%cHello Sir looking around in the console! Insted of hacking, what about you contribute to MathFlare on GitHub?","font-family:consolas; font-size: 20px");
-        console.log("%cMathFlare","color: DodgerBlue; font-weight: 600; font-family:consolas; font-size: 40px");
-        console.log("%cby the way, the curiosity killed the cat you know...","color: PaleGreen; font-weight: 600; font-family:consolas; font-size: 20px");
+        console.log("%cHello Sir looking around in the console! Insted of hacking, what about you contribute to MathFlare on GitHub?", "font-family:consolas; font-size: 20px");
+        console.log("%cMathFlare", "color: DodgerBlue; font-weight: 600; font-family:consolas; font-size: 40px");
+        console.log("%cby the way, the curiosity killed the cat you know...", "color: PaleGreen; font-weight: 600; font-family:consolas; font-size: 20px");
     </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
+
 </html>
