--- a/perimeter.html
+++ b/perimeter.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- MAIL -->
     <meta name="yandex-verification" content="f86171133514f762" />
@@ -9,18 +10,22 @@
     <title>MathFlare - Perimeter Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
-    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="keywords"
+        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
+    <meta name="description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="MathFlare LLC." />
     <meta name="og:url" content="https://www.mathflare.tk" />
     <meta name="og:title" content="MathFlare" />
-    <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="og:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="twitter:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Footer.css" rel="stylesheet" />
@@ -29,7 +34,9 @@
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
@@ -40,6 +47,7 @@
         gtag('config', 'G-7W2S8VV31F');
     </script>
 </head>
+
 <body>
     <!-- NAVBAR START -->
     <div id="nav-container"></div>
@@ -48,14 +56,14 @@
         <h1 class="text-white">Perimeter Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-        <h4 class="text-white"><i class="bi bi-square"></i> Square</h4>
-        <div class="center-form">
-            <input type="number" id="squaren" placeholder="side" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="square" class="btn btn-success btn-lg equation" value="Calculate">
-        </div>
+            <h4 class="text-white"><i class="bi bi-square"></i> Square</h4>
+            <div class="center-form">
+                <input type="number" id="squaren" placeholder="side" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="square" class="btn btn-success btn-lg equation" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -63,22 +71,23 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=square+perimeter" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=square+perimeter" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white"><i class="bi bi-file"></i> Parallelogram</h4>
-        <div class="center-form">
-            <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="parah" placeholder="height" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="para" class="btn btn-success btn-lg equation" value="Calculate">
-        </div>
+            <h4 class="text-white"><i class="bi bi-file"></i> Parallelogram</h4>
+            <div class="center-form">
+                <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="parah" placeholder="height" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="para" class="btn btn-success btn-lg equation" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -86,26 +95,28 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=parallelogram+perimeter" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=parallelogram+perimeter" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white"><i class="bi bi-triangle"></i> Triangle</h4>
-        <div class="center-form">
-            <input type="number" id="tria" placeholder="first side" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="trib" placeholder="second side" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="tric" placeholder="third side" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="tri" class="btn btn-success btn-lg equation" value="Calculate">
-        </div>
+            <h4 class="text-white"><i class="bi bi-triangle"></i> Triangle</h4>
+            <div class="center-form">
+                <input type="number" id="tria" placeholder="first side" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="trib" placeholder="second side" class="form-control mb-0" step="0.01"
+                    min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="tric" placeholder="third side" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="tri" class="btn btn-success btn-lg equation" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -113,18 +124,19 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=triangle+perimeter" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=triangle+perimeter" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white"><i class="bi bi-triangle"></i> Equilateral Triangle</h4>
-        <div class="center-form">
-            <input type="number" id="trin" placeholder="side" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="eqtri" class="btn btn-success btn-lg equation" value="Calculate">
-        </div>
+            <h4 class="text-white"><i class="bi bi-triangle"></i> Equilateral Triangle</h4>
+            <div class="center-form">
+                <input type="number" id="trin" placeholder="side" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="eqtri" class="btn btn-success btn-lg equation" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -132,18 +144,19 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=equilateral+triangle+perimeter" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=equilateral+triangle+perimeter" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white"><i class="bi bi-circle"></i> Circle</h4>
-        <div class="center-form">
-            <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="circle" class="btn btn-success btn-lg equation" value="Calculate">
-        </div>
+            <h4 class="text-white"><i class="bi bi-circle"></i> Circle</h4>
+            <div class="center-form">
+                <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="circle" class="btn btn-success btn-lg equation" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -151,19 +164,20 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=circle+perimeter" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=circle+perimeter" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white"><i class="bi bi-heptagon"></i> Polygon</h4>
-        <h5>enter the sides with commas as shown in the example</h5>
-        <div class="center-form">
-            <textarea id="sides" placeholder="eg. 1,3,8,12.4,2" class="form-control message" required></textarea>
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="polyg" class="btn btn-success btn-lg equation" value="Calculate">
-        </div>
+            <h4 class="text-white"><i class="bi bi-heptagon"></i> Polygon</h4>
+            <h5>enter the sides with commas as shown in the example</h5>
+            <div class="center-form">
+                <textarea id="sides" placeholder="eg. 1,3,8,12.4,2" class="form-control message" required></textarea>
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="polyg" class="btn btn-success btn-lg equation" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -180,4 +194,5 @@
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
+
 </html>
