--- a/punnettsquare.html
+++ b/punnettsquare.html
@@ -80,7 +80,8 @@
         <table class="table table-bordered text-white mx-auto" style="cursor: crosshair;">
             <thead>
                 <tr>
-                    <th scope="col"><sup><i class="bi bi-gender-male"></i></sup>&frasl;<sub><i class="bi bi-gender-female"></i></sub></th>
+                    <th scope="col"><sup><i class="bi bi-gender-male"></i></sup>&frasl;<sub><i
+                                class="bi bi-gender-female"></i></sub></th>
                     <th id="f1" scope="col">Α</th>
                     <th id="f2" scope="col">Α</th>
                 </tr>
