--- a/tos.html
+++ b/tos.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- SEO -->
     <meta charset="utf-8" />
@@ -7,18 +8,22 @@
     <title>MathFlare - ToS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
-    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="keywords"
+        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
+    <meta name="description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="MathFlare LLC." />
     <meta name="og:url" content="https://www.mathflare.tk" />
     <meta name="og:title" content="MathFlare" />
-    <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="og:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="twitter:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Footer.css" rel="stylesheet" />
@@ -27,7 +32,9 @@
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
@@ -38,6 +45,7 @@
         gtag('config', 'G-7W2S8VV31F');
     </script>
 </head>
+
 <body>
     <!-- NAVBAR START -->
     <div id="nav-container"></div>
@@ -46,60 +54,79 @@
     <div class="text-white m-4">
         <h2>Terms of Service(ToS)</h2>
         <section id="intro">
-        <p>Your privacy is important to us. It is MathFlare&#39;s Co. Ltd. policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.mathflare.tk">https://www.mathflare.tk</a>, and other sites we own and operate. </p>
-        <p>This policy is effective as of 20 April 2021 and was last updated on 6 July 2021.</p>
+            <p>Your privacy is important to us. It is MathFlare&#39;s Co. Ltd. policy to respect your privacy and comply
+                with any applicable law and regulation regarding any personal information we may collect about you,
+                including across our website, <a href="https://www.mathflare.tk">https://www.mathflare.tk</a>, and other
+                sites we own and operate. </p>
+            <p>This policy is effective as of 20 April 2021 and was last updated on 6 July 2021.</p>
         </section>
         <section id="important-notice">
-        <h3>Important Notice</h3>
-        <p>We rely on 3rd party software such as <i>Google Analytics</i>, <i>Media.net</i>, <i>PostMail</i>, <i>hCaptcha</i> and <i>Sign In with Google</i> for monetization, analytics, functionality and protection. By using our website you know knowingly agree to their Privacy Policy and Terms of Use as well.</p>
+            <h3>Important Notice</h3>
+            <p>We rely on 3rd party software such as <i>Google Analytics</i>, <i>Media.net</i>, <i>PostMail</i>,
+                <i>hCaptcha</i> and <i>Sign In with Google</i> for monetization, analytics, functionality and
+                protection. By using our website you know knowingly agree to their Privacy Policy and Terms of Use as
+                well.</p>
         </section>
         <section id="info-we-collect">
-        <h3>Information We Collect</h3>
-        <p>We do not collect any information from you or your activity across our website.</p>
+            <h3>Information We Collect</h3>
+            <p>We do not collect any information from you or your activity across our website.</p>
         </section>
         <section id="security-of-data">
-        <h4>Security of Your Personal Information</h4>
-        <p>Since we do not collect or process any of your personal information, you don't have to worry about the security of your personal information</p>
-        </section>   
+            <h4>Security of Your Personal Information</h4>
+            <p>Since we do not collect or process any of your personal information, you don't have to worry about the
+                security of your personal information</p>
+        </section>
         </section>
         <section id="childrens-privacy">
-        <h3>Children’s Privacy</h3>
-        <p>We do aim our product at children under the age of 13, and we do not knowingly collect personal information about children under 13 or about anyone to be honest</p>
+            <h3>Children’s Privacy</h3>
+            <p>We do aim our product at children under the age of 13, and we do not knowingly collect personal
+                information about children under 13 or about anyone to be honest</p>
         </section>
         <section id="disclosure-of-personal-info-to-third-party">
-        <h3>Disclosure of Personal Information to Third Parties</h3>
-        <p>We do not knowingly disclose your personal information to anyone</p>
+            <h3>Disclosure of Personal Information to Third Parties</h3>
+            <p>We do not knowingly disclose your personal information to anyone</p>
         </section>
         <section id="cookies">
-        <h3>Use of Cookies</h3>
-        <p>We use &ldquo;cookies&rdquo; to locally store information about your activity across our site inside your browser. A cookie is a small piece of data that our website stores on your computer, and accesses each time you visit.</p>
-        <h3>Limits of Our Policy</h3>
-        <p>Our website may link to external sites that are not operated by us. Please be aware that we have no control over the content and policies of those sites, and cannot accept responsibility or liability for their respective privacy practices. </p>
+            <h3>Use of Cookies</h3>
+            <p>We use &ldquo;cookies&rdquo; to locally store information about your activity across our site inside your
+                browser. A cookie is a small piece of data that our website stores on your computer, and accesses each
+                time you visit.</p>
+            <h3>Limits of Our Policy</h3>
+            <p>Our website may link to external sites that are not operated by us. Please be aware that we have no
+                control over the content and policies of those sites, and cannot accept responsibility or liability for
+                their respective privacy practices. </p>
         </section>
         <section id="cahnges-to-policy">
-        <h3>Changes to This Policy</h3>
-        <p>At our discretion, we may change our privacy policy to reflect updates to our business processes, current acceptable practices, or legislative or regulatory changes. If we decide to change this privacy policy, we will post the changes here at the same link by which you are accessing this privacy policy. </p>
-        <p>If required by law, we will get your permission or give you the opportunity to opt in to or opt out of, as applicable, any new uses of your personal information. </p>
+            <h3>Changes to This Policy</h3>
+            <p>At our discretion, we may change our privacy policy to reflect updates to our business processes, current
+                acceptable practices, or legislative or regulatory changes. If we decide to change this privacy policy,
+                we will post the changes here at the same link by which you are accessing this privacy policy. </p>
+            <p>If required by law, we will get your permission or give you the opportunity to opt in to or opt out of,
+                as applicable, any new uses of your personal information. </p>
         </section>
         <section id="contact">
-        <h3>Contact Us</h3>
-        <p>For any questions or concerns regarding your privacy, you may contact us using the following details: </p>
-        <p>
-            <a href="https://dkatsios.ml" target="_blank">Damian Katsios</a><br />
-            hello@dkatsios.tk
-        </p>
-        <p>
-            Sarantis Moutsatsos<br />
-            saradis.m06@gmail.com
-        </p>
-        <p>
-            MathFlare Co. Ltd.<br />
-            mathflare@dkatsios.tk
-        </p>
-        <p>Or use our <a href="contact.html">Contact Form</a></p>
+            <h3>Contact Us</h3>
+            <p>For any questions or concerns regarding your privacy, you may contact us using the following details:
+            </p>
+            <p>
+                <a href="https://dkatsios.ml" target="_blank">Damian Katsios</a><br />
+                hello@dkatsios.tk
+            </p>
+            <p>
+                Sarantis Moutsatsos<br />
+                saradis.m06@gmail.com
+            </p>
+            <p>
+                MathFlare Co. Ltd.<br />
+                mathflare@dkatsios.tk
+            </p>
+            <p>Or use our <a href="contact.html">Contact Form</a></p>
         </section>
         <hr>
-        <footer><p>&copy;2021 MathFlare Co. Ltd. All rights reserved. - <a href="https://validator.w3.org/nu/">Validate this website</a> </p></footer>
+        <footer>
+            <p>&copy;2021 MathFlare Co. Ltd. All rights reserved. - <a href="https://validator.w3.org/nu/">Validate this
+                    website</a> </p>
+        </footer>
     </div>
     <!-- TOS END -->
     <!-- SCRIPTS START -->
@@ -109,4 +136,5 @@
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
+
 </html>
