--- a/area.html
+++ b/area.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- MAIL -->
     <meta name="yandex-verification" content="f86171133514f762" />
@@ -9,18 +10,22 @@
     <title>MathFlare - Area Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
-    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="keywords"
+        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
+    <meta name="description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="MathFlare LLC." />
     <meta name="og:url" content="https://www.mathflare.tk" />
     <meta name="og:title" content="MathFlare" />
-    <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="og:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="twitter:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Footer.css" rel="stylesheet" />
@@ -29,7 +34,9 @@
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
@@ -40,6 +47,7 @@
         gtag('config', 'G-7W2S8VV31F');
     </script>
 </head>
+
 <body>
     <!-- NAVBAR START -->
     <div id="nav-container"></div>
@@ -48,14 +56,14 @@
         <h1 class="text-white">Area Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-        <h4 class="text-white"><i class="bi bi-square"></i> Square</h4>
-        <div class="center-form">
-            <input type="number" id="squareside" placeholder="side" class="form-control mb-0" step="0.01" min="0"/>
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="squarecalc" class="btn btn-success btn-lg equation" value="Calculate">
-        </div>
+            <h4 class="text-white"><i class="bi bi-square"></i> Square</h4>
+            <div class="center-form">
+                <input type="number" id="squareside" placeholder="side" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="squarecalc" class="btn btn-success btn-lg equation" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -63,22 +71,23 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=square+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=square+area" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white"><i class="bi bi-file"></i> Parallelogram</h4>
-        <div class="center-form">
-            <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="parah" placeholder="height" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="paracalc" class="btn btn-success btn-lg equation" value="Calculate">
-        </div>
+            <h4 class="text-white"><i class="bi bi-file"></i> Parallelogram</h4>
+            <div class="center-form">
+                <input type="number" id="paraw" placeholder="width" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="parah" placeholder="height" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="paracalc" class="btn btn-success btn-lg equation" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -86,22 +95,24 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=parallelogram+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=parallelogram+area" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white"><i class="bi bi-triangle"></i> Triangle</h4>
-        <div class="center-form">
-            <input type="number" id="tria" placeholder="segment" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="trib" placeholder="corresponding height" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="tricalc" class="btn btn-success btn-lg equation" value="Calculate">
-        </div>
+            <h4 class="text-white"><i class="bi bi-triangle"></i> Triangle</h4>
+            <div class="center-form">
+                <input type="number" id="tria" placeholder="segment" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="trib" placeholder="corresponding height" class="form-control mb-0" step="0.01"
+                    min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="tricalc" class="btn btn-success btn-lg equation" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -109,18 +120,19 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=triangle+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=triangle+area" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white"><i class="bi bi-triangle"></i> Equilateral Triangle</h4>
-        <div class="center-form">
-            <input type="number" id="etris" placeholder="side" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="etricalc" class="btn btn-success btn-lg equation" value="Calculate">
-        </div>
+            <h4 class="text-white"><i class="bi bi-triangle"></i> Equilateral Triangle</h4>
+            <div class="center-form">
+                <input type="number" id="etris" placeholder="side" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="etricalc" class="btn btn-success btn-lg equation" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -128,18 +140,19 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=equilateral+triangle+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=equilateral+triangle+area" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white"><i class="bi bi-circle"></i> Circle</h4>
-        <div class="center-form">
-            <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="circlecalc" class="btn btn-success btn-lg equation" value="Calculate">
-        </div>
+            <h4 class="text-white"><i class="bi bi-circle"></i> Circle</h4>
+            <div class="center-form">
+                <input type="number" id="circler" placeholder="radius" class="form-control mb-0" step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="circlecalc" class="btn btn-success btn-lg equation" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -147,17 +160,20 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=circle+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=circle+area" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
             <h4 class="text-white"><i class="bi bi-pentagon"></i> Trapezoid</h4>
             <div class="center-form">
-                <input type="number" id="trapa" placeholder="small segment" class="form-control mb-0" step="0.01" min="0" />
+                <input type="number" id="trapa" placeholder="small segment" class="form-control mb-0" step="0.01"
+                    min="0" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="trapb" placeholder="large segment" class="form-control mb-0" step="0.01 min="0"" />
+                <input type="number" id="trapb" placeholder="large segment" class="form-control mb-0" step="0.01 min="
+                    0"" />
             </div>
             <br>
             <div class="center-form">
@@ -167,15 +183,16 @@
             <div class="center-form">
                 <input type="submit" id="trapcalc" class="btn btn-success btn-lg equation" value="Calculate">
             </div>
-            </form>
-            <br />
-            <div style="max-height: 1em;">
-                <p class="text-success" id="trapout"></p>
-            </div>
-            <br>
-            <div class="my-4">
-                <a href="https://www.google.com/search?q=trapezoid+area" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
-            </div>
+        </form>
+        <br />
+        <div style="max-height: 1em;">
+            <p class="text-success" id="trapout"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=trapezoid+area" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
+        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
@@ -185,4 +202,5 @@
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
+
 </html>
