--- a/license.html
+++ b/license.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- SEO -->
     <meta charset="utf-8" />
@@ -7,18 +8,22 @@
     <title>MathFlare - License</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
-    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="keywords"
+        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
+    <meta name="description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="MathFlare LLC." />
     <meta name="og:url" content="https://www.mathflare.tk" />
     <meta name="og:title" content="MathFlare" />
-    <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="og:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="twitter:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Footer.css" rel="stylesheet" />
@@ -27,7 +32,9 @@
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
@@ -38,6 +45,7 @@
         gtag('config', 'G-7W2S8VV31F');
     </script>
 </head>
+
 <body>
     <!-- NAVBAR START -->
     <div id="nav-container"></div>
@@ -48,7 +56,10 @@
         <br>
         <section id="before-you-read">
             <h3>Before you Read</h3>
-            <p>What all of the things below basically say is that you may use our code as is as long as you include the same MIT License and Copyrights <code class="codeblock">Copyright (c) 2021 MathFlare Co. Ltd. - All rights reserved. - Licensed under the MIT License</code></p>
+            <p>What all of the things below basically say is that you may use our code as is as long as you include the
+                same MIT License and Copyrights <code
+                    class="codeblock">Copyright (c) 2021 MathFlare Co. Ltd. - All rights reserved. - Licensed under the MIT License</code>
+            </p>
         </section>
         <section id="breakdown">
             <h3>Key Components</h3>
@@ -57,7 +68,9 @@
                 <div class=" col-xxl-3">
                     <h4><i class="bi bi-credit-card-2-front"></i> MIT License</h4>
                     <p style="opacity: 60%;">
-                        A short and simple permissive license with conditions only requiring preservation of copyright and license notices. Licensed works, modifications, and larger works may be distributed under different terms and without source code.
+                        A short and simple permissive license with conditions only requiring preservation of copyright
+                        and license notices. Licensed works, modifications, and larger works may be distributed under
+                        different terms and without source code.
                     </p>
                 </div>
                 <div class=" col-xxl-2">
@@ -72,8 +85,8 @@
                 <div class=" col-xxl-2">
                     <h4>Limitations</h4>
                     <ul style="list-style-type: none;">
-                        <li><i class="bi bi-x-lg"></i>  Liability</li>
-                        <li><i class="bi bi-x-lg"></i>  Warranty</li>
+                        <li><i class="bi bi-x-lg"></i> Liability</li>
+                        <li><i class="bi bi-x-lg"></i> Warranty</li>
                     </ul>
                 </div>
                 <div class=" col-xxl-2">
@@ -87,46 +100,48 @@
         <section id="description">
             <h3>Description</h3>
             <p class=" codeblock" style="opacity: 60%;">
-Copyright (c) 2021 MathFlare
+                Copyright (c) 2021 MathFlare
 
-<br>
-<br>
+                <br>
+                <br>
 
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
+                Permission is hereby granted, free of charge, to any person obtaining a copy
+                of this software and associated documentation files (the "Software"), to deal
+                in the Software without restriction, including without limitation the rights
+                to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+                copies of the Software, and to permit persons to whom the Software is
+                furnished to do so, subject to the following conditions:
 
-<br>
-<br>
+                <br>
+                <br>
 
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
+                The above copyright notice and this permission notice shall be included in all
+                copies or substantial portions of the Software.
 
-<br><br>
+                <br><br>
 
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE.
+                THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+                IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+                FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+                AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+                LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+                OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+                SOFTWARE.
             </p>
         </section>
         <section id="disclaimer">
             <h5>Disclaimer!</h5>
-            <p>this is not legal advice. <a href="https://opensource.guide/legal/" target="_blank">Learn more about open source software licsences</a></p>
+            <p>this is not legal advice. <a href="https://opensource.guide/legal/" target="_blank">Learn more about open
+                    source software licsences</a></p>
         </section>
-    <div>
-    <!-- TOS END -->
-    <!-- SCRIPTS START -->
-    <script src="Scripts/jquery-3.0.0.js"></script>
-    <script src="Scripts/bootstrap.js"></script>
-    <script src="dist/navbar.js"></script>
-    <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
-    <!-- SCRIPT END -->
+        <div>
+            <!-- TOS END -->
+            <!-- SCRIPTS START -->
+            <script src="Scripts/jquery-3.0.0.js"></script>
+            <script src="Scripts/bootstrap.js"></script>
+            <script src="dist/navbar.js"></script>
+            <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
+            <!-- SCRIPT END -->
 </body>
+
 </html>
