--- a/linear-systems.html
+++ b/linear-systems.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- MAIL -->
     <meta name="yandex-verification" content="f86171133514f762" />
@@ -9,18 +10,22 @@
     <title>MathFlare - Linear Systems</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
-    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="keywords"
+        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
+    <meta name="description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="MathFlare LLC." />
     <meta name="og:url" content="https://www.mathflare.tk" />
     <meta name="og:title" content="MathFlare" />
-    <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="og:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="twitter:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Footer.css" rel="stylesheet" />
@@ -29,7 +34,9 @@
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
@@ -40,6 +47,7 @@
         gtag('config', 'G-7W2S8VV31F');
     </script>
 </head>
+
 <body>
     <!-- NAVBAR START -->
     <div id="nav-container"></div>
@@ -48,44 +56,44 @@
         <h1 class="text-white">Linear 2x2 Systems; ax + by = c</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-        <h3 class="text-white">First Equation:</h3>
-        <hr class="bg-danger" style="width: 50%;" />
-        <h4 class="text-white">Enter the value of <i>a</i></h4>
-        <div class="center-form">
-            <input type="number" id="a1" placeholder="a" name="a1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br />
-        <h4 class="text-white">Enter the value of <i>b</i></h4>
-        <div class="center-form">
-            <input type="number" id="b1" placeholder="b" name="b1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <h4 class="text-white">Enter the value of <i>c</i></h4>
-        <div class="center-form">
-            <input type="number" id="c1" placeholder="c" name="c1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <h3 class="text-white">Second Equation:</h3>
-        <hr class="bg-danger" style="width: 50%;" />
-        <h4 class="text-white">Enter the value of <i>a</i></h4>
-        <div class="center-form">
-            <input type="number" id="a2" placeholder="a" name="a2" class="form-control mb-0" step="0.01" />
-        </div>
-        <br />
-        <h4 class="text-white">Enter the value of <i>b</i></h4>
-        <div class="center-form">
-            <input type="number" id="b2" placeholder="b" name="b2" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <h4 class="text-white">Enter the value of <i>c</i></h4>
-        <div class="center-form">
-            <input type="number" id="c2" placeholder="c" name="c2" class="form-control mb-0" step="0.01" />
-        </div>
-        <br />
-        <div class="center-form gap-2">
-            <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
-            <input type="reset" class="btn btn-danger btn-lg" value="Reset">
-        </div>
+            <h3 class="text-white">First Equation:</h3>
+            <hr class="bg-danger" style="width: 50%;" />
+            <h4 class="text-white">Enter the value of <i>a</i></h4>
+            <div class="center-form">
+                <input type="number" id="a1" placeholder="a" name="a1" class="form-control mb-0" step="0.01" />
+            </div>
+            <br />
+            <h4 class="text-white">Enter the value of <i>b</i></h4>
+            <div class="center-form">
+                <input type="number" id="b1" placeholder="b" name="b1" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <h4 class="text-white">Enter the value of <i>c</i></h4>
+            <div class="center-form">
+                <input type="number" id="c1" placeholder="c" name="c1" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <h3 class="text-white">Second Equation:</h3>
+            <hr class="bg-danger" style="width: 50%;" />
+            <h4 class="text-white">Enter the value of <i>a</i></h4>
+            <div class="center-form">
+                <input type="number" id="a2" placeholder="a" name="a2" class="form-control mb-0" step="0.01" />
+            </div>
+            <br />
+            <h4 class="text-white">Enter the value of <i>b</i></h4>
+            <div class="center-form">
+                <input type="number" id="b2" placeholder="b" name="b2" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <h4 class="text-white">Enter the value of <i>c</i></h4>
+            <div class="center-form">
+                <input type="number" id="c2" placeholder="c" name="c2" class="form-control mb-0" step="0.01" />
+            </div>
+            <br />
+            <div class="center-form gap-2">
+                <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
+                <input type="reset" class="btn btn-danger btn-lg" value="Reset">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -93,30 +101,31 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=Solve+Linear+2x2+systems" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=Solve+Linear+2x2+systems" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr style="width: 60%;">
         <h3>Case X = Y; ax + by = c</h3>
         <hr style="width: 50%;">
         <form autocomplete="off">
             <h4 class="text-white">Enter the value of <i>a</i></h4>
-        <div class="center-form">
-            <input type="number" id="a3" placeholder="a" name="a1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br />
-        <h4 class="text-white">Enter the value of <i>b</i></h4>
-        <div class="center-form">
-            <input type="number" id="b3" placeholder="b" name="b1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <h4 class="text-white">Enter the value of <i>c</i></h4>
-        <div class="center-form">
-            <input type="number" id="c3" placeholder="c" name="c1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="button2" class="btn btn-success btn-lg" value="Calculate">
-        </div>
+            <div class="center-form">
+                <input type="number" id="a3" placeholder="a" name="a1" class="form-control mb-0" step="0.01" />
+            </div>
+            <br />
+            <h4 class="text-white">Enter the value of <i>b</i></h4>
+            <div class="center-form">
+                <input type="number" id="b3" placeholder="b" name="b1" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <h4 class="text-white">Enter the value of <i>c</i></h4>
+            <div class="center-form">
+                <input type="number" id="c3" placeholder="c" name="c1" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="button2" class="btn btn-success btn-lg" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -124,7 +133,8 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=Solve+Linear+2x2+systems+when+x=y" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=Solve+Linear+2x2+systems+when+x=y" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         </form>
     </div>
@@ -136,11 +146,12 @@
     <script src="dist/linear-systems-x-equals-y.js"></script>
     <script>
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {  
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
             return new bootstrap.Tooltip(tooltipTriggerEl)
         });
     </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
+
 </html>
