--- a/logar.html
+++ b/logar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- SEO -->
     <meta charset="utf-8" />
@@ -7,18 +8,22 @@
     <title>MathFlare - Logarithms</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
-    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="keywords"
+        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
+    <meta name="description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="MathFlare LLC." />
     <meta name="og:url" content="https://www.mathflare.tk" />
     <meta name="og:title" content="MathFlare" />
-    <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="og:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="twitter:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Footer.css" rel="stylesheet" />
@@ -27,7 +32,9 @@
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
@@ -38,6 +45,7 @@
         gtag('config', 'G-7W2S8VV31F');
     </script>
 </head>
+
 <body>
     <!-- NAVBAR START -->
     <div id="nav-container"></div>
@@ -46,19 +54,21 @@
         <h1 class="text-white">Logarithms</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Enter the number</h4>
-        <div class="center-form">
-            <input type="number" id="number" placeholder="number" name="side" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br />
-        <h4 class="text-white">Enter the logarithm's base(10 is the default)</h4>
-        <div class="center-form">
-            <input type="number" id="base" placeholder="base" value="10" name="side" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
-        </div>
+            <h4 class="text-white">Enter the number</h4>
+            <div class="center-form">
+                <input type="number" id="number" placeholder="number" name="side" class="form-control mb-0" step="0.01"
+                    min="0" />
+            </div>
+            <br />
+            <h4 class="text-white">Enter the logarithm's base(10 is the default)</h4>
+            <div class="center-form">
+                <input type="number" id="base" placeholder="base" value="10" name="side" class="form-control mb-0"
+                    step="0.01" min="0" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
+            </div>
         </form>
         <br>
         <div style="max-height: 1em;">
@@ -66,13 +76,15 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=logarithm" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=logarithm" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr style="width: 50%">
         <h3>Natural Logarithm; log<sub>e</sub></h3>
         <form autocomplete="off">
             <div class="center-form">
-                <input type="number" id="natnum" placeholder="number" name="side" class="form-control mb-0" step="0.01" min="0" />
+                <input type="number" id="natnum" placeholder="number" name="side" class="form-control mb-0" step="0.01"
+                    min="0" />
             </div>
             <br>
             <div class="center-form">
@@ -85,7 +97,8 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=natural+logarithm" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=natural+logarithm" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
@@ -96,4 +109,5 @@
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
+
 </html>
