--- a/percent.html
+++ b/percent.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- MAIL -->
     <meta name="yandex-verification" content="f86171133514f762" />
@@ -9,18 +10,22 @@
     <title>MathFlare - Percentage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
-    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="keywords"
+        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
+    <meta name="description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="MathFlare LLC." />
     <meta name="og:url" content="https://www.mathflare.tk" />
     <meta name="og:title" content="MathFlare" />
-    <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="og:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="twitter:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Footer.css" rel="stylesheet" />
@@ -29,7 +34,9 @@
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
@@ -40,6 +47,7 @@
         gtag('config', 'G-7W2S8VV31F');
     </script>
 </head>
+
 <body>
     <!-- NAVBAR START -->
     <div id="nav-container"></div>
@@ -48,18 +56,18 @@
         <h1 class="text-white">Percentages</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Fraction to Percentage <sup>X</sup>&frasl;<sub>Y</sub></h4>
-        <div class="center-form">
-            <input type="number" id="num1" placeholder="X" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="den1" placeholder="Y" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
-        </div>
+            <h4 class="text-white">Fraction to Percentage <sup>X</sup>&frasl;<sub>Y</sub></h4>
+            <div class="center-form">
+                <input type="number" id="num1" placeholder="X" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="den1" placeholder="Y" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -67,22 +75,23 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=fraction+to+percentage" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=fraction+to+percentage" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Percentage of X</h4>
-        <div class="center-form">
-            <input type="number" id="per2" placeholder="%" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="num2" placeholder="X" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="button2" class="btn btn-success btn-lg" value="Calculate">
-        </div>
+            <h4 class="text-white">Percentage of X</h4>
+            <div class="center-form">
+                <input type="number" id="per2" placeholder="%" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="num2" placeholder="X" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="button2" class="btn btn-success btn-lg" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -90,22 +99,23 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+percentage" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=calculate+percentage" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Percentage Difference</h4>
-        <div class="center-form">
-            <input type="number" id="init3" placeholder="initial value" class="form-control mb-0" step="0.01"/>
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="fin3" placeholder="final value" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="button3" class="btn btn-success btn-lg" value="Calculate">
-        </div>
+            <h4 class="text-white">Percentage Difference</h4>
+            <div class="center-form">
+                <input type="number" id="init3" placeholder="initial value" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="fin3" placeholder="final value" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="button3" class="btn btn-success btn-lg" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -113,29 +123,30 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+percentage+difference" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=calculate+percentage+difference" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Value after discount</h4>
-        <div class=" center-form">
-            <select class="form-select center-form" id="select">
-                <option value="inc">Increase</option>
-                <option value="dec">Decrease</option>
-            </select>
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="init4" placeholder="initial value" class="form-control mb-0" step="0.01"/>
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="disc4" placeholder="%discount" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="button4" class="btn btn-success btn-lg" value="Calculate">
-        </div>
+            <h4 class="text-white">Value after discount</h4>
+            <div class=" center-form">
+                <select class="form-select center-form" id="select">
+                    <option value="inc">Increase</option>
+                    <option value="dec">Decrease</option>
+                </select>
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="init4" placeholder="initial value" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="disc4" placeholder="%discount" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="button4" class="btn btn-success btn-lg" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -143,29 +154,30 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+value+after+discount" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=calculate+value+after+discount" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Value before discount</h4>
-        <div class=" center-form">
-            <select class="form-select center-form" id="select2">
-                <option value="inc">Increase</option>
-                <option value="dec">Decrease</option>
-            </select>
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="fin5" placeholder="final value" class="form-control mb-0" step="0.01"/>
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="disc5" placeholder="%discount" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="button5" class="btn btn-success btn-lg" value="Calculate">
-        </div>
+            <h4 class="text-white">Value before discount</h4>
+            <div class=" center-form">
+                <select class="form-select center-form" id="select2">
+                    <option value="inc">Increase</option>
+                    <option value="dec">Decrease</option>
+                </select>
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="fin5" placeholder="final value" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="disc5" placeholder="%discount" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="button5" class="btn btn-success btn-lg" value="Calculate">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -173,7 +185,8 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+value+before+discount" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=calculate+value+before+discount" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
@@ -184,4 +197,5 @@
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
+
 </html>
