fix: pointsdistance title

--- a/pointsdistance.html
+++ b/pointsdistance.html
@@ -5,7 +5,7 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MathFlare - Slope</title>
+    <title>MathFlare - Distance Between	Two Points</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
     <meta name="keywords"
